<resources>
    <string name="app_name">Pizza \'n\' Pub 24</string>

    <string name="title_activity_main">Pizza \'n\' Pub 24</string>
    <string name="title_activity_delivery">Delivery Order</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create Account</string>
    <string name="title_activity_menu">Menu Card</string>
    <string name="title_activity_pizza">Pizza</string>
    <string name="title_activity_make_pizza">Make Pizza</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_payment">Order Payment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="backdrop_title">MENU</string>

    <string name="spinner_title">Select</string>

    <string name="title_activity_table_reservation">Table Reservation</string>

    <string name="action_sign_in_short">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phn">Phone number</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_again">Enter Password Again</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip">Postal Address</string>
    <string name="hint_npersons">Number of persons</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_save">Save</string>
    <string name="btn_date">Pick Date</string>
    <string name="btn_time">Pick Time</string>
    <string name="btn_table">Make Reservation</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_makePizza">Make Pizza</string>
    <string name="btn_selectaddress">Select Address</string>
    <string name="btn_selectpizza">Select Pizza</string>
    <string name="prompt_password">Enter Password</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">MM/YY</string>
    <string name="sec_no">Security Number</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="btn_address">Show Address</string>
    <string name="btn_add_address">Add Address</string>
    <string name="btn_remove_address">Remove Address</string>
    <string name="title_activity_cart">Order Cart</string>
</resources>